🦄 refactor: 删除Category